[package]
name = "mini-redis-rust"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "config"
#path = "src/app_config"

# cargo build --bin client
[[bin]]
name = "client"
path = "src/bin/client.rs"

# cargo build --bin core
[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.3"
async-trait = "0.1.73"
