[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
webpki-roots = "0.25"
webpki = { package = "rustls-webpki", version = "0.101.2", features = ["alloc", "std"] }
async-trait = "0.1.73"