[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
async-trait = "0.1.73"
regex = "1.9.3"

[dev-dependencies]
mockall = "0.11.4"
tempdir = "0.3.7"
